--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
-version: '3.1'
+version: '3.7'
 services:
-  db:
-    image: postgres:latest
+  postgresql:
+    image: postgres:12-alpine
     ports:
-      - "8080:8080"
+      - "5432:5432"
     environment:
-      POSTGRES_DB: db
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: qwerty123
-
+      - POSTGRES_DB=db
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=qwerty123
 
 
